styles/style.css
/* ... */
#main-nav ul {
    list-style: none;
}



#main-nav li {
    display: inline-block;
    margin-top: 1rem
}

#main-nav li a {
    color: var(--main_dark_color);
    text-decoration: none;
    font-size: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
    font-family: var(--font_content);
    transition-duration: 300ms;
}


#main-nav li a:hover {
    color: var(--seccond_light_color);
    text-shadow: 0.1rem 0.1rem 0.1rem var(--main_shadow_color);
    font-weight: bold;
    border: .1rem solid var(--main_shadow_color);
    border-radius: 10%;
    padding-top: .25rem;
    padding-bottom: .25rem;
}

#main-nav li a.active {
    
    border-bottom: .1rem solid var(--main_shadow_color);
    border-radius: 10%;
    padding-top: .25rem;
    padding-bottom: .25rem;
}

/* responsive for navbar */
@media (max-width: 1199px) {
    #main-nav li a { 
        padding: 0 .65rem;
    }
}

@media (max-width: 991px) {
    #main-nav {
        flex-direction: column;
        align-items: start;
        justify-content: center;
        padding-left: 3rem;
        padding-right: 0;
    }
    #main-nav #logo{
        font-size: 5rem;
        margin-bottom: 2rem;
    }
    #main-nav ul {
        padding-inline-start: 0;
        margin-block-start: 0;
        margin-block-end: 0;
    }
    #main-nav li {
        display: block;
        margin-top: 1rem 0;
    }
    #main-nav li a {
        font-size: 1.6rem;
        line-height: 3.25rem;
    }

}
@media (max-width: 767px){
    #main-nav #logo{
        font-size: rem;
        margin-bottom: 1rem;
    }
    #main-nav li a {
        font-size: 1.05rem;
        line-height: 2.75rem;
    }
}


/* Footer */

footer{
    height: 8vh;
    background-color: var(--main_dark_color);
}

footer div{
    display: flex;
    justify-content: space-between;
    color: var(--backgroud_light_color);
}
footer p {
    font-size: 1rem;
}
/* responsive design for Footer */

@media (max-width: 991px) {
    footer{
        height: 9rem;
        text-align: center;
    }
    footer div{
        display: inline-block;
        text-align: center;
        margin: auto;
    }
    footer p {
        font-size: 1.5rem;
    }
}
@media (max-width: 767px){
    footer{
        height: 9.5rem;
    }
    footer p {
        font-size: .9rem;
        padding: 0 1rem;
    }
}


        /* -->> Index.html <<-- */


/* Welcome section */

#welcome {
    min-height: 100vh;
}
#welcome div{
    margin-left: 3.5vw;
}
#welcome .container div #welcome_text{    
    margin: 0 auto;
    margin-top: 7rem;
    margin-bottom: 2rem;
    color: var(--main_shadow_color);
    font-size: 6rem;
    /* font-size: clamp(5vw, 6vw, 8vw); */
}
#welcome div #welcome_p a{
    text-decoration: none;
    color: var(--main_shadow_color);
    font-size: 2rem;
    margin: 3rem 1rem;
    transition-duration: 300ms;
}

#welcome div #welcome_p a:hover {
    text-shadow: 0.1rem 0.1rem 0.1rem var(--main_shadow_color);
    color: var(--seccond_light_color);
}

#welcome .container #five_icon{
    text-align: center;
    margin: 0;
    color: var(--seccond_light_color);

    font-size: 40rem;

    position: absolute;
    left: 62%;
    top: 14%;
    text-shadow: 1rem 1rem var(--main_shadow_color), 1.2rem 1.2rem  var(--backgroud_light_color), 2rem 2rem  var(--main_dark_color);
    font-family: var(--font_heading);
} 
    /* About Us Section */

#about_home {
    display: flex;
    gap: 4rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
}
#about_home #about_home_img {
    border-radius: 10%;
    box-shadow: .3rem .3rem .3rem var(--main_shadow_color);
}
#about_home div h2{
    font-size: 2.5rem;
    color: var(--main_shadow_color);
    margin-block-start: 0;
    margin-block-end: 0;
    padding-bottom: 1.5rem;
}
#about_home div p{
    padding-bottom: 2rem;
}
#about_home div a{
    font-size: 1rem;
}

    /* Jobs Section */

#jobs_img {
    margin-top: 3.5rem;
    height: 15rem;
    width: 100%;
    background-image: url(./images/our_journey.jpg);
    background-size: cover;
    background-position: center;
    position: relative;
    isolation: isolate;
    box-shadow: 0 .3rem .3rem var(--main_shadow_color), 0 -.3rem .3rem var(--main_shadow_color);
}
#jobs_img::after{
   content: '';
    position: absolute;
    inset: 0;
    background: var(--backgroud_light_color);
   z-index: -1;
    opacity: .4;
}
#jobs_home {
    margin-bottom: 3rem;
}
#jobs_home div h2{
    font-size: 2.5rem;
    color: var(--main_shadow_color);
    margin-block-start: 0;
    margin-block-end: 0;
    padding-bottom: 1.5rem;

    margin-top: 2rem;
}
#jobs_home div p{
    padding-bottom: 2rem;
}

    /*  Contact Section*/

#contacts_home h1 {
    margin-block-end: 0;
    text-align: center;
    font-size: 3rem;
    background-color: var(--main_shadow_color);
    color: var(--backgroud_light_color);
    padding: 2rem;
}
#contacts_home div {
    display: flex;
}
#contacts_home div .contacts {
    display: flex;
    flex-direction: column;
    width: 33%;
    text-align: left;
    padding: 2rem;
    margin: 0 5vw;
}
#contacts_home div .contacts p{
    text-align: left;
}

/* Resonsive Design for Index.html */

@media (max-width: 1199px){
    #welcome {
        min-height: 75vh;
    }
    #welcome .container div #welcome_text{
        font-size: 5rem;
        margin-top: 4rem;
    }
    #welcome .container #five_icon{
        text-align: center;
        margin: 0;
        color: var(--seccond_light_color);
    
        font-size: 30rem;
    
        position: absolute;
        left: 60%;
        top: 20%;
        text-shadow: 1rem 1rem var(--main_shadow_color), 1.2rem 1.2rem  var(--backgroud_light_color), 2rem 2rem  var(--main_dark_color);
        font-family: var(--font_heading);
    }
    #contacts_home div .contacts { 
        margin: 0;
    }

}
/* ... */

